# nanyu

./: Cargo.toml
application/: Cargo.toml
application/src/: card_management_service.rs  learning_service.rs  lib.rs
application/src/acl/: card_management_to_learning.rs  card_management_to_learning_integration.rs  mod.rs
application/src/cqrs_utils/: collection.rs  collection_projector.rs  mod.rs  outbound_adapter.rs  projector.rs
application/src/projections/: mod.rs  reviewable_card_projection.rs
application/src/services/: card_management_service.rs  learning_service.rs  mod.rs
domain/card-management-domain/: Cargo.toml
domain/card-management-domain/src/deck/: aggregate.rs  command.rs  error.rs  event.rs  mod.rs
domain/card-management-domain/src/flashcard/: aggregate.rs  command.rs  error.rs  event.rs
domain/learning-domain/: Cargo.toml
domain/learning-domain/src/: lib.rs
domain/learning-domain/src/learning_session/: aggregate.rs  command.rs  error.rs  event.rs  mod.rs
domain/learning-domain/src/learning_session/value_objects/: answer_quality.rs  language.rs  mod.rs  session_status.rs
domain/learning-domain/src/scheduled_review/: aggregate.rs  command.rs  error.rs  event.rs
domain/learning-domain/src/views/: mod.rs  reviewable_card.rs
infrastructure/app-builder/: Cargo.toml
infrastructure/app-builder/src/: lib.rs
infrastructure/cqrs-utils/: Cargo.toml
infrastructure/cqrs-utils/src/: lib.rs  list_all_query.rs
infrastructure/seeders/: Cargo.toml
infrastructure/seeders/seeds/: bommel-de-loodhervormer-1.json
infrastructure/seeders/src/: lib.rs
infrastructure/stores/in-memory-store/: Cargo.toml
infrastructure/stores/in-memory-store/src/: lib.rs
presentation/axum-presentation/: Cargo.toml
(+1 files in other folders)
