[workspace]
resolver = "2"
members = [
    # Domain libraries
    "domain/card-management-domain",
    "domain/learning-domain",

    # Application library
    "application",

    # Presentation libraries
    "presentation/axum-presentation",

    # Infrastructure libraries
    "infrastructure/stores/in-memory-store",
    "infrastructure/cqrs-utils",
    "infrastructure/app-builder",
]


[workspace.dependencies]
async-trait = "0.1"
cqrs-es = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
tokio = "1.47"
uuid = { version = "1.18", features = ["v4"] }
