[package]
name = "learning-domain"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
chrono = { version = "0.4", features = ["serde"] }
cqrs-es.workspace = true
rs-fsrs = { version = "1.2", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
time = { version = "0.3", features = ["serde"] }
tokio.workspace = true
uuid.workspace = true
